--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: SOCRATES -- your politely aksing ethics guide
+title: SOCRATES -- your politely asking ethics guide
 email: smo@leibniz-hbi.de
 description: >- # this means to ignore newlines until "baseurl:"
   Concise, and helpful guidance to pursue legal and ethical research with digital trace data, particularly online communication and online media data.
